# eggbot-twitch

./: .env_example  README.md  noxfile.py  pyproject.toml
.github/workflows/: python-tests.yml
src/eggbot_twitch/: proto.py
src/eggbot_twitch/twichapi/: __init__.py  _exceptions.py  _users.py
src/eggbot_twitch/twitchapi/: __init__.py  _exceptions.py
src/eggbot_twitch/twitchauth/: __init__.py  _auth.py  _twitch_authe.py  _twitch_autho.py  _twitch_user_grant.py  authentication.py  authorization.py  clientauth.py  userauth.py  userauthgrant.py
src/eggbot_twitch/twitchevent/: __init__.py  _eventclient.py  _session.py
tests/: proto_test.py  sample_test.py  twitch_autho_test.py
tests/twitchapi/: users_test.py
tests/twitchauth/: auth_test.py  clientauth_test.py  twitch_authe_test.py  twitch_autho_test.py  twitch_user_grant_test.py  userauth_test.py
tests/twitchevent/: eventclient_test.py
